# ninjabot

./: README.md
ninjabot_control/: CMakeLists.txt  package.xml
ninjabot_control/config/: diff_drive_params.yaml  leftMotor_params.yaml
ninjabot_control/launch/: arduino_serial.launch  ninjabot_drive.launch  realrobot.launch  rplidar.launch  sensorfuse.launch
ninjabot_control/params/: ekf_params.yaml
ninjabot_control/src/: initialize.py  initialize_imu_pub.py  task2_pub.py  task2_sub.py  vel_to_odom.cpp
ninjabot_description/: CMakeLists.txt  package.xml
ninjabot_description/meshes/: ATC_link_1.stl  BLD_link_1.stl  BLH_link_1.stl  BLLDF_link_1.stl  BRH_link_1.stl  BRSLDF_link_1.stl  FH_link_1.stl  (+32 more)
ninjabot_launcher_api/: CMakeLists.txt  package.xml
ninjabot_mapping/: CMakeLists.txt  package.xml
ninjabot_mapping/config/: gmapping_params.yaml
ninjabot_mapping/launch/: gmappin_rviz.launch  ninjabot_gmapping.launch  ninjabot_mapping.launch  save_map.launch
ninjabot_mapping/maps/: house.pgm  house.yaml  my_home.pgm  my_home.yaml  myhouse.pgm  myhouse.yaml  sister_house.pgm  sister_house.yaml
ninjabot_mapping/rviz/: mapping.rviz
ninjabot_msgs/: CMakeLists.txt  package.xml
ninjabot_navigation/: CMakeLists.txt  package.xml
ninjabot_simulation/: CMakeLists.txt  package.xml
ninjabot_simulation/launch/: empty_world.launch  gazebo.launch  house.launch  ninjabot_rviz.launch
ninjabot_simulation/models/house/: model.config
ninjabot_simulation/rviz/: gazebo.rviz
ninjabot_simulation/worlds/: house.world
ninjabot_teleop/: CMakeLists.txt  package.xml
(+31 files in other folders)
