<?xml version="1.0"?>
<package format="2">
  <name>ninjabot_mapping</name>
  <version>0.0.0</version>
  <description>The ninjabot_mapping package</description>

  <maintainer email="chaitu@todo.todo">chaitu</maintainer>
  <license>Todo</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <exec_depend>gmapping</exec_depend>
  <exec_depend>ninjabot_simulation</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
